[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanda-model-provenance"
version = "0.1.0"
description = "Model provenance metadata for NANDA agent discovery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["nanda", "agent", "model", "provenance", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/nanda_model_provenance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
